@@ -1,5 +1,8 @@
 package com.memeboo2.haemi.m4.application.service;
 
+import com.memeboo2.haemi.m0.domain.model.ElderAccessMode;
+import com.memeboo2.haemi.m0.domain.model.ElderStatus;
+import com.memeboo2.haemi.m0.domain.port.ElderAccessPort;
 import com.memeboo2.haemi.m1.domain.model.album.Album;
 import com.memeboo2.haemi.m1.domain.model.album.AlbumId;
 import com.memeboo2.haemi.m1.domain.port.NotificationPort;
@@ -13,7 +16,6 @@ import com.memeboo2.haemi.m4.domain.repository.AlertRecipientSettingRepository;
 import com.memeboo2.haemi.m4.domain.repository.CognitiveChangeAlertRepository;
 import com.memeboo2.haemi.m4.domain.repository.CognitiveMetricRepository;
 import com.memeboo2.haemi.m4.domain.repository.CognitiveReportRepository;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
@@ -23,13 +25,12 @@ import java.lang.reflect.Method;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 import java.util.Set;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -43,184 +44,167 @@ class DashboardApplicationServiceTest {
     @Mock PdfReportPort pdfReportPort;
     @Mock InstitutionDashboardExportPort institutionDashboardExportPort;
     @Mock NotificationPort notificationPort;
+    @Mock ElderAccessPort elderAccess;
 
-    DashboardApplicationService service;
+    private DashboardApplicationService service;
+    private UUID elderId;
 
-    void setUp() {
-        service = new DashboardApplicationService(
-                metricRepository, reportRepository, alertRepository,
-                alertRecipientRepository, albumRepository,
-                pdfReportPort, institutionDashboardExportPort, notificationPort);
+    private void setUp() {
+        elderId = UUID.randomUUID();
+        service = new DashboardApplicationService(metricRepository, reportRepository, alertRepository,
+                alertRecipientRepository, albumRepository, pdfReportPort, institutionDashboardExportPort,
+                notificationPort, elderAccess, new ActivityChangeLanguagePolicy());
     }
 
     @Test
-    @DisplayName("resolvePeriodEnd는 월간 리포트 시 전월 말일을 반환한다")
-    void resolvePeriodEnd_monthlyReturnsLastDayOfPreviousMonth() throws Exception {
+    void resolvePeriodEndUsesYesterdayForWeeklyAndPreviousMonthEndForMonthly() throws Exception {
         setUp();
-        Method method = DashboardApplicationService.class
-                .getDeclaredMethod("resolvePeriodEnd", ReportPeriod.class);
+        Method method = DashboardApplicationService.class.getDeclaredMethod("resolvePeriodEnd", ReportPeriod.class);
         method.setAccessible(true);
 
-        // When called on July 6, MONTHLY should return June 30
-        var result = method.invoke(service, ReportPeriod.MONTHLY);
-        // The result depends on the current date, so we verify the logic structurally
-        assertThat((java.time.LocalDate) result).isEqualTo(
-                java.time.LocalDate.now().minusMonths(1)
-                        .with(java.time.temporal.TemporalAdjusters.lastDayOfMonth()));
+        assertThat((LocalDate) method.invoke(service, ReportPeriod.WEEKLY)).isEqualTo(LocalDate.now().minusDays(1));
+        assertThat((LocalDate) method.invoke(service, ReportPeriod.MONTHLY)).isEqualTo(
+                LocalDate.now().minusMonths(1).with(java.time.temporal.TemporalAdjusters.lastDayOfMonth()));
     }
 
     @Test
-    @DisplayName("resolvePeriodEnd는 주간 리포트 시 하루 전을 반환한다")
-    void resolvePeriodEnd_weeklyReturnsYesterday() throws Exception {
-        setUp();
-        Method method = DashboardApplicationService.class
-                .getDeclaredMethod("resolvePeriodEnd", ReportPeriod.class);
-        method.setAccessible(true);
-
-        var result = method.invoke(service, ReportPeriod.WEEKLY);
-        assertThat((java.time.LocalDate) result)
-                .isEqualTo(java.time.LocalDate.now().minusDays(1));
-    }
-
-    @Test
-    @DisplayName("리포트는 추이·회상·최다 사진 유형·이전 기간 변화를 집계하고 가족에게 알린다")
-    void generateReport_buildsCompleteReportAndNotifiesFamily() {
+    void standardReportContainsOnlyReminiscenceRecordsAndSafeActivityNarrative() {
         setUp();
         UUID albumId = UUID.randomUUID();
-        Album album = Album.create("elder-1", "group-1", "family-1");
+        Album album = Album.create(elderId.toString(), "group-1", "family-1");
         album.inviteMember("family-2");
         album.acceptInvite("family-2");
-        List<CognitiveDailyMetric> current = metrics(albumId, 0.8, 20.0, "FAMILY");
-        List<CognitiveDailyMetric> previous = metrics(albumId, 0.6, 25.0, "PORTRAIT");
-        when(metricRepository.findByElderIdAndDateBetween(anyString(), any(), any()))
-                .thenReturn(current)
-                .thenReturn(previous);
+        when(elderAccess.getRequired(elderId)).thenReturn(snapshot(ElderStatus.ACTIVE));
+        when(metricRepository.findByElderIdAndDateBetween(eq(elderId.toString()), any(), any()))
+                .thenReturn(metrics(albumId, 1, "가족 여행", "photo-1"))
+                .thenReturn(metrics(albumId, 1, "고향", "photo-2"));
         when(pdfReportPort.generatePdf(any())).thenReturn("/tmp/report.pdf");
         when(reportRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
         when(albumRepository.findById(AlbumId.of(albumId))).thenReturn(Optional.of(album));
 
         var result = service.generateReport(new GenerateCognitiveReportCommand(
-                "elder-1", albumId.toString(), ReportPeriod.WEEKLY,
-                ReportDeliveryMethod.IN_APP));
+                elderId.toString(), albumId.toString(), ReportPeriod.WEEKLY, ReportDeliveryMethod.IN_APP));
 
-        assertThat(result.accuracyTrend()).hasSize(7);
-        assertThat(result.reminiscenceParticipationCount()).isEqualTo(14);
-        assertThat(result.mostReactedPhotoType()).isEqualTo("FAMILY");
-        assertThat(result.accuracyChangeFromPrevious()).isCloseTo(0.2,
-                org.assertj.core.data.Offset.offset(0.0001));
-        assertThat(result.responseTimeChangeFromPrevious()).isEqualTo(-5.0);
-        verify(notificationPort).sendToGroup(
-                album.getMemberIds(), "인지 리포트가 생성되었습니다", result.changeSummary());
+        assertThat(result.mode()).isEqualTo(ReportMode.STANDARD);
+        assertThat(result.daysTogether()).isEqualTo(7);
+        assertThat(result.rememberedTopics()).containsExactly("가족 여행");
+        assertThat(result.topDwelledPhotos()).containsExactly("photo-1");
+        assertThat(result.activityMessage()).contains("함께한 날");
+        assertThat(result.summary()).doesNotContain("정답", "점수", "인지", "악화", "개선");
+        verify(notificationPort).sendToGroup(album.getMemberIds(), "회상 기록이 준비되었어요",
+                result.summary() + " " + result.medicalDisclaimer());
     }
 
     @Test
-    @DisplayName("리포트 최초 열람 시각을 저장한다")
-    void markReportViewed_recordsViewedAt() {
+    void decliningElderAlwaysGetsMemoryFocusedReportWithoutComparison() {
         setUp();
-        CognitiveReport report = CognitiveReport.create(
-                "elder-1", null, ReportPeriod.WEEKLY,
-                LocalDate.now().minusDays(7), LocalDate.now().minusDays(1),
-                7, 0.8, 20.0, 3, 4, "FAMILY",
-                0.1, -2.0, List.of(), "요약", ReportDeliveryMethod.IN_APP);
-        when(reportRepository.findById(report.getId())).thenReturn(Optional.of(report));
-        when(reportRepository.save(report)).thenReturn(report);
+        UUID albumId = UUID.randomUUID();
+        when(elderAccess.getRequired(elderId)).thenReturn(snapshot(ElderStatus.DECLINING));
+        when(metricRepository.findByElderIdAndDateBetween(eq(elderId.toString()), any(), any()))
+                .thenReturn(metrics(albumId, 1, "바닷가", "photo-1"));
+        when(pdfReportPort.generatePdf(any())).thenReturn("/tmp/report.pdf");
+        when(reportRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
+        when(albumRepository.findById(AlbumId.of(albumId))).thenReturn(Optional.of(
+                Album.create(elderId.toString(), "group-1", "family-1")));
 
-        var result = service.markReportViewed(report.getId().toString());
+        var result = service.generateReport(new GenerateCognitiveReportCommand(
+                elderId.toString(), albumId.toString(), ReportPeriod.WEEKLY, ReportDeliveryMethod.IN_APP));
 
-        assertThat(result.viewedAt()).isNotNull();
-        verify(reportRepository).save(report);
+        assertThat(result.mode()).isEqualTo(ReportMode.MEMORY_FOCUSED);
+        assertThat(result.activityMessage()).isNull();
+        assertThat(result.summary()).doesNotContain("지난 기간", "비교", "정답", "점수");
+        verify(metricRepository, times(1)).findByElderIdAndDateBetween(eq(elderId.toString()), any(), any());
     }
 
     @Test
-    @DisplayName("조기 알림 수신자가 없으면 탐지와 발송을 중단한다")
-    void detectEarlyAlerts_requiresRecipients() {
+    void deceasedElderBlocksReportBeforePdfOrNotification() {
         setUp();
-        when(alertRecipientRepository.findByElderId("elder-1")).thenReturn(Optional.empty());
+        when(elderAccess.getRequired(elderId)).thenReturn(snapshot(ElderStatus.DECEASED));
 
-        assertThatThrownBy(() -> service.detectEarlyAlerts("elder-1"))
-                .isInstanceOf(AlertRecipientsNotConfiguredException.class);
-        verifyNoInteractions(metricRepository, notificationPort);
+        assertThatThrownBy(() -> service.generateReport(new GenerateCognitiveReportCommand(
+                elderId.toString(), null, ReportPeriod.WEEKLY, ReportDeliveryMethod.IN_APP)))
+                .isInstanceOf(ReportDeliveryBlockedException.class);
+
+        verifyNoInteractions(metricRepository, pdfReportPort, reportRepository, notificationPort);
     }
 
     @Test
-    @DisplayName("정답률 하락이 최근 3일 연속일 때 설정한 보호자와 기관 담당자에게 한 번 알린다")
-    void detectEarlyAlerts_notifiesConfiguredRecipientsAfterThreeSustainedDays() {
+    void activityLanguageGateRejectsDiagnosticVocabulary() {
+        assertThatThrownBy(() -> new ActivityChangeLanguagePolicy()
+                .requireSafe("인지 기능이 악화되었습니다"))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @Test
+    void activityAlertUsesVoiceChangeAndOnlySendsToInstitutionBeforeStageTwo() {
         setUp();
         AlertRecipientSetting setting = AlertRecipientSetting.createOrUpdate(
-                null, "elder-1", "caregiver-1", Set.of("manager-1"));
-        when(alertRecipientRepository.findByElderId("elder-1")).thenReturn(Optional.of(setting));
-        when(alertRepository.findLatestByElderIdSince(eq("elder-1"), any())).thenReturn(Optional.empty());
-        when(metricRepository.findByElderIdAndDateBetween(eq("elder-1"), any(), any()))
-                .thenReturn(recentMetrics(0.55, 20.0))
-                .thenReturn(previousMetrics(0.80, 20.0));
+                null, elderId.toString(), "family-owner", Set.of("institution-manager"));
+        when(elderAccess.getRequired(elderId)).thenReturn(snapshot(ElderStatus.ACTIVE));
+        when(alertRecipientRepository.findByElderId(elderId.toString())).thenReturn(Optional.of(setting));
+        when(alertRepository.findLatestByElderIdSince(eq(elderId.toString()), any())).thenReturn(Optional.empty());
+        when(metricRepository.findByElderIdAndDateBetween(eq(elderId.toString()), any(), any()))
+                .thenReturn(voiceDropHistory());
         when(alertRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
 
-        var alerts = service.detectEarlyAlerts("elder-1");
+        var alerts = service.detectEarlyAlerts(elderId.toString());
 
-        assertThat(alerts).singleElement()
-                .satisfies(alert -> assertThat(alert.alertType()).isEqualTo(AlertType.ACCURACY_DROP));
-        verify(notificationPort).sendToGroup(
-                Set.of("caregiver-1", "manager-1"),
-                "인지 변화 알림",
-                alerts.get(0).message());
+        assertThat(alerts).singleElement().satisfies(alert -> {
+            assertThat(alert.alertType()).isEqualTo(AlertType.VOICE_ACTIVITY_DROP);
+            assertThat(alert.message()).doesNotContain("정답", "점수", "인지", "악화", "진단");
+        });
+        verify(notificationPort).sendToGroup(Set.of("institution-manager"), "어르신 소식이에요",
+                alerts.getFirst().message());
     }
 
     @Test
-    @DisplayName("정답률 하락이 하루뿐이면 조기 알림을 보내지 않는다")
-    void detectEarlyAlerts_ignoresTransientAccuracyDrop() {
+    void activityAlertIsNotSentAfterDeath() {
         setUp();
-        AlertRecipientSetting setting = AlertRecipientSetting.createOrUpdate(
-                null, "elder-1", "caregiver-1", Set.of());
-        when(alertRecipientRepository.findByElderId("elder-1")).thenReturn(Optional.of(setting));
-        when(alertRepository.findLatestByElderIdSince(eq("elder-1"), any())).thenReturn(Optional.empty());
-        List<CognitiveDailyMetric> recent = recentMetrics(0.80, 20.0);
-        recent.get(0).updateSnapshot("institution-1", 1, 0.55, 20.0, 0, 0, null);
-        when(metricRepository.findByElderIdAndDateBetween(eq("elder-1"), any(), any()))
-                .thenReturn(recent)
-                .thenReturn(previousMetrics(0.80, 20.0));
+        when(elderAccess.getRequired(elderId)).thenReturn(snapshot(ElderStatus.DECEASED));
 
-        assertThat(service.detectEarlyAlerts("elder-1")).isEmpty();
-        verifyNoInteractions(notificationPort);
+        assertThat(service.detectEarlyAlerts(elderId.toString())).isEmpty();
+        verifyNoInteractions(alertRecipientRepository, metricRepository, notificationPort);
     }
 
     @Test
-    @DisplayName("기관에 어르신 데이터가 없으면 빈 목록 대신 명시적 예외를 반환한다")
-    void getInstitutionDashboard_rejectsEmptyInstitution() {
+    void institutionDashboardStillRejectsAnEmptyInstitution() {
         setUp();
-        when(metricRepository.findByInstitutionIdAndDateBetween(anyString(), any(), any()))
-                .thenReturn(List.of());
+        when(metricRepository.findByInstitutionIdAndDateBetween(anyString(), any(), any())).thenReturn(List.of());
 
-        assertThatThrownBy(() -> service.getInstitutionDashboard(
-                new GetInstitutionDashboardQuery(
-                        "institution-1", LocalDate.now().minusDays(6), LocalDate.now(), null)))
+        assertThatThrownBy(() -> service.getInstitutionDashboard(new GetInstitutionDashboardQuery(
+                "institution-1", LocalDate.now().minusDays(6), LocalDate.now(), null)))
                 .isInstanceOf(InstitutionSeniorsNotFoundException.class);
     }
 
-    private List<CognitiveDailyMetric> metrics(UUID albumId, double accuracy,
-                                               double responseSeconds, String photoType) {
+    private ElderAccessPort.ElderAccessSnapshot snapshot(ElderStatus status) {
+        return new ElderAccessPort.ElderAccessSnapshot(elderId, UUID.randomUUID(), status, ElderAccessMode.A, 2);
+    }
+
+    private List<CognitiveDailyMetric> metrics(UUID albumId, int voiceCount, String topic, String photo) {
         return java.util.stream.IntStream.range(0, 7)
-                .mapToObj(index -> CognitiveDailyMetric.create(
-                        "elder-1", albumId, "institution-1",
-                        LocalDate.now().minusDays(index + 1),
-                        1, accuracy, responseSeconds, 2, 1, photoType))
+                .mapToObj(index -> metric(albumId, LocalDate.now().minusDays(index + 1), 1, voiceCount, 5_000,
+                        0, 0, 2, topic, photo))
                 .toList();
     }
 
-    private List<CognitiveDailyMetric> recentMetrics(double accuracy, double responseSeconds) {
-        return java.util.stream.IntStream.range(0, 7)
-                .mapToObj(index -> CognitiveDailyMetric.create(
-                        "elder-1", UUID.randomUUID(), "institution-1",
-                        LocalDate.now().minusDays(index),
-                        1, accuracy, responseSeconds, 0, 0, null))
-                .toList();
+    private List<CognitiveDailyMetric> voiceDropHistory() {
+        UUID albumId = UUID.randomUUID();
+        List<CognitiveDailyMetric> metrics = new java.util.ArrayList<>();
+        for (int daysAgo = 13; daysAgo >= 0; daysAgo--) {
+            int voice = daysAgo <= 2 ? 0 : 1;
+            metrics.add(metric(albumId, LocalDate.now().minusDays(daysAgo), 1, voice, 5_000,
+                    0, 0, 0, null, null));
+        }
+        return metrics;
     }
 
-    private List<CognitiveDailyMetric> previousMetrics(double accuracy, double responseSeconds) {
-        return java.util.stream.IntStream.rangeClosed(7, 13)
-                .mapToObj(index -> CognitiveDailyMetric.create(
-                        "elder-1", UUID.randomUUID(), "institution-1",
-                        LocalDate.now().minusDays(index),
-                        1, accuracy, responseSeconds, 0, 0, null))
-                .toList();
+    private CognitiveDailyMetric metric(UUID albumId, LocalDate date, int sessions, int voiceCount, double dwellMs,
+                                        int hintPlaybacks, int hintNoResponses, int familyContributions,
+                                        String topic, String photo) {
+        CognitiveDailyMetric metric = CognitiveDailyMetric.create(elderId.toString(), albumId, "institution-1",
+                date, 0, 0.0, 0.0, 0, 0, null);
+        metric.updateReminiscenceSnapshot("institution-1", sessions, voiceCount, dwellMs,
+                hintPlaybacks, hintNoResponses, familyContributions, topic, photo);
+        return metric;
     }
 }
